--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,5 +1,6 @@
 [Paths]
-TestResultDirectory = /data/cooling-box/DATA-Snowball/storage/2013-03-18
+#TestResultDirectory = /data/cooling-box/DATA-Snowball/storage/2013-03-18
 #OverviewPath = /data/cooling-box/ResultsPSI
-OverviewPath = /home/peller/ModuleResultsPSI
-
+#OverviewPath = /home/peller/ModuleResultsPSI
+TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
+OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
