correct axis titles
git-svn-id: https://svn.cern.ch/reps/moreweb@46 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,6 +1,6 @@
 [Paths]
-#TestResultDirectory = /data/cooling-box/DATA-Snowball/storage/2013-03-18
+TestResultDirectory = /home/peller/Validation
 #OverviewPath = /data/cooling-box/ResultsPSI
-#OverviewPath = /home/peller/ModuleResultsPSI
-TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
-OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
+OverviewPath = /home/peller/Validation
+#TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
+#OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
