removed buggy statement to skip tar files
git-svn-id: https://svn.cern.ch/reps/moreweb@54 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,6 +1,8 @@
 [Paths]
-TestResultDirectory = /home/peller/Validation
+#TestResultDirectory = /home/peller/Validation
+TestResultDirectory = /home/peller/ModuleDB/storage/2013-06-04
 #OverviewPath = /data/cooling-box/ResultsPSI
-OverviewPath = /home/peller/Validation
+OverviewPath = /home/peller/ModuleDB/overview
+#OverviewPath = /home/peller/Validation
 #TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
 #OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
