--- a/Analyse/Configuration/ModuleInformation.cfg
+++ b/Analyse/Configuration/ModuleInformation.cfg
@@ -3,5 +3,5 @@ ModuleVersion = 1
 
 [TestType]
 #TestType = FullQualification
-#TestType = 2TempQualification
-TestType = automatic
+TestType = 2TempQualification
+#TestType = automatic
