--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -31,6 +31,7 @@ slopeivB =  2
 # check
 minThrDiff = -5
 maxThrDiff = 5
+BumpBondThr = 150
 StandardADC2ElectronConversionFactor = 65
 IVCurrentFactor = -1e6
 TrimBitDifference = 2.
