- implemented the possibility to define a link to an overview page which is different to the overview page created by moreweb
- added revision number to final results directories, such that one can
  analyse and store the results more than one time

- working on error handling, started to catch exceptions, write them into a
  list and than analyse this list to get one single return value

- working on allowing different structure in final results paths such that
  data and results are divided into different directories


git-svn-id: https://svn.cern.ch/reps/moreweb@81 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -6,3 +6,6 @@ OverviewPath = /Users/bachmair/DATA/Overview
 #OverviewPath = /Users/peller/Validation
 #TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
 #OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
+FinalResultsPath = /Users/bachmair/DATA/FinalResults
+
+AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
