cleaning code + renaming pathes + reading of configParamets.dat to extract roc version number, etc.
git-svn-id: https://svn.cern.ch/reps/moreweb@84 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -8,4 +8,4 @@ OverviewPath = /Users/bachmair/DATA/Overview
 #OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
 FinalResultsPath = /Users/bachmair/DATA/FinalResults
 
-AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
+#AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
