--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,11 +1,11 @@
 [Paths]
-#TestResultDirectory = /Users/peller/Validation
-TestResultDirectory = /Users/bachmair/DATA/moduleTest
-#OverviewPath = /data/cooling-box/ResultsPSI
-OverviewPath = /Users/bachmair/DATA/Overview
-#OverviewPath = /Users/peller/Validation
-#TestResultDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
-#OverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
-FinalResultsPath = /Users/bachmair/DATA/FinalResults
-
+#GlobalDataDirectory = /Users/peller/Validation
+GlobalDataDirectory = /Users/bachmair/DATA/moduleTest
+#GlobalOverviewPath = /data/cooling-box/ResultsPSI
+GlobalOverviewPath = /Users/bachmair/DATA/Overview
+#GlobalOverviewPath = /Users/peller/Validation
+GlobalDataDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
+GlobalOverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
+GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
+GlobalFinalResultsPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/1_FinalResults
 #AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
