integrated fitting functionality
git-svn-id: https://svn.cern.ch/reps/moreweb@94 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,11 +1,11 @@
 [Paths]
 #GlobalDataDirectory = /Users/peller/Validation
-GlobalDataDirectory = /Users/bachmair/DATA/moduleTest
+GlobalDataDirectory = /Users/peller/pixel/TestModuleData/storage/test/
 #GlobalOverviewPath = /data/cooling-box/ResultsPSI
-GlobalOverviewPath = /Users/bachmair/DATA/Overview
+GlobalOverviewPath = /Users/peller/pixel/TestModuleData/overview/
 #GlobalOverviewPath = /Users/peller/Validation
-GlobalDataDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
-GlobalOverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
-GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
-GlobalFinalResultsPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/1_FinalResults
+#GlobalDataDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
+#GlobalOverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
+#GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
+GlobalFinalResultsPath = /Users/peller/pixel/TestModuleData/final/
 #AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
