- refit option in ModuleInformation.cfg
- new option single fullqualification

- new option no revision number including in paths

- error for wrong single full qualification directory

-comments added to Path.cfg

reminder: 
    if one doesn't want to use a GlobalFinalResultsPath comment that option


git-svn-id: https://svn.cern.ch/reps/moreweb@97 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,11 +1,15 @@
 [Paths]
-#GlobalDataDirectory = /Users/peller/Validation
-GlobalDataDirectory = /Users/peller/pixel/TestModuleData/storage/test/
-#GlobalOverviewPath = /data/cooling-box/ResultsPSI
-GlobalOverviewPath = /Users/peller/pixel/TestModuleData/overview/
-#GlobalOverviewPath = /Users/peller/Validation
-#GlobalDataDirectory = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/2013-03-15
-#GlobalOverviewPath = /Users/esteban/Documents/ETH/Fächer/06 Semesterarbeit/Testdaten/0_Overview
-#GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
-GlobalFinalResultsPath = /Users/peller/pixel/TestModuleData/final/
+# Input data directory
+GlobalDataDirectory = /Users/bachmair/DATA/moduleTest
+
+#local DB directory including the local html overview page
+GlobalOverviewPath = /Users/bachmair/DATA/Overview
+
+# If not specified (commented out) the FinalResults will be in a
+# subdirectory of the Raw Data
+GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
+
+
+# If the Overview page is different to the local page, e.g. if one uses the
+# globalDB
 #AbsoluteOverviewPage = http://cmspixel.pi.infn.it/cgi-bin/ModuleQualificationOverview.cgi
