--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -33,7 +33,7 @@ minThrDiff = -5
 maxThrDiff = 5
 BumpBondThr = 150
 StandardADC2ElectronConversionFactor = 65
-IVCurrentFactor = -1e6
+IVCurrentFactor = -1
 TrimBitDifference = 2.
 PixelMapMaxValue = 10
 PixelMapMinValue = 0
