updated Histo Mappings
git-svn-id: https://svn.cern.ch/reps/moreweb@109 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -1,3 +1,11 @@
+[Fulltest]
+configFormat: dat
+configParameters: configParameters.dat
+
+[SCurveFitting]
+inputFileName = SCurveData_C%d.dat
+dir = ./
+
 #Fulltest->Chips->Chip
 [AddressDecoding]
 AddressDecoding: AddressDecoding_C%d
