--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -1,3 +1,10 @@
+[Fulltest]
+configFormat: cfg
+configParameters: tb,module
+
+[SCurveFitting]
+inputFileName = SCurveData_C%d.dat
+dir = SCurves/
 
 [AddressDecoding]
 AddressDecoding: Calibrate_ROC_%d
