fixed some minor problems to get it work with pyxar
git-svn-id: https://svn.cern.ch/reps/moreweb@113 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -6,6 +6,10 @@ configParameters: configParameters.dat
 inputFileName = SCurveData_C%d.dat
 dir = ./
 
+[PHCalibrationFitting]
+inputFileName = phCalibration_C%d.dat
+dir = ./
+
 #Fulltest->Chips->Chip
 [AddressDecoding]
 AddressDecoding: AddressDecoding_C%d
