--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -6,6 +6,10 @@ configParameters: tb,module
 inputFileName = SCurveData_C%d.dat
 dir = SCurves/
 
+[PHCalibrationFitting]
+inputFileName = phCalibration_C%d.dat
+dir = PHCalibration/
+
 [AddressDecoding]
 AddressDecoding: Calibrate_ROC_%d
 
@@ -48,7 +52,7 @@ TrimBit1: VthrCompDifference_Trim_13_ROC_%d
 TrimBit0: VthrCompDifference_Trim_14_ROC_%d
 
 [VcalThresholdTrimmed]
-ThresholdMap: Vcal_Map_4_ROC_%d
+ThresholdMap: Vcal_Distribution_4_ROC_%d
 
 
 #HIGH-RATE-TESTS
