fixed histo names
git-svn-id: https://svn.cern.ch/reps/moreweb@115 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -22,8 +22,8 @@ Analog: vcals_xtalk_C%dDistribution
 Digital: BumpBondMap_C%dDistribution
 
 [BumpBondingProblems]
-Analog: <!BumpBonding|Analog!>
-Digital: <!BumpBonding|Digital!>
+Analog: vcals_xtalk_C%d
+Digital:  BumpBondMap_C%d
 
 [PixelMap]
 PixelMap: PixelMap_C%d
