--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -18,11 +18,11 @@ AddressLevels: None
 
 [BumpBonding]
 #Analog: None
-Digital: BondMap_ROC_%d
+Digital: BondMap_Distribution_ROC_%d
 	
 [BumpBondingProblems]
 #Analog: <!BumpBonding|Analog!>
-Digital: <!BumpBonding|Digital!>
+Digital: BondMap_ROC_%d
 
 [PixelMap]
 #PixelMap: None
