added template for pxar histonames, updated other histoname files
git-svn-id: https://svn.cern.ch/reps/moreweb@123 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -18,7 +18,7 @@ AddressDecoding: AddressDecoding_C%d
 AddressLevels: AddressLevels_C%d
 
 [BumpBonding]
-Analog: vcals_xtalk_C%dDistribution
+Analog: BumpBond>vcals_xtalk_C%dDistribution
 Digital: BumpBondMap_C%dDistribution
 
 [BumpBondingProblems]
@@ -46,7 +46,7 @@ ThresholdMap: VcalThresholdMap_C%dDistribution;8
 TrimBits: TrimMap_C%d;8
 
 [TrimBitMap]
-TrimBitMap: TrimMap_C%d;8
+TrimBitMap: Trim_Map_4_ROC_%d
 
 [TrimBitTest]
 TrimBit3: TrimBit7_C%d
