--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -45,6 +45,9 @@ ThresholdMap: Vcal_Map_4_ROC_%d
 [TrimBits]
 TrimBits: Trim_Distribution_4_ROC_%d
 
+[TrimBitMap]
+TrimBitMap: Trim_Map_4_ROC_%d
+
 [TrimBitTest]
 TrimBit3: VthrCompDifference_Trim_7_ROC_%d
 TrimBit2: VthrCompDifference_Trim_11_ROC_%d
