working on correct names for pxar
git-svn-id: https://svn.cern.ch/reps/moreweb@128 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -4,6 +4,7 @@ configParameters: tb,module
 
 [SCurveFitting]
 inputFileName = SCurveData_C%d.dat
+nTrigs = 50
 dir = SCurves/
 
 [PHCalibrationFitting]
@@ -19,7 +20,7 @@ AddressLevels: None
 [BumpBonding]
 #Analog: None
 Digital: BondMap_Distribution_ROC_%d
-	
+
 [BumpBondingProblems]
 #Analog: <!BumpBonding|Analog!>
 Digital: BondMap_ROC_%d
