--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -1,16 +1,19 @@
+[RootFile]
+filename: pxar.root
 [Fulltest]
 configFormat: dat
 configParameters: configParameters.dat
 
 [SCurveFitting]
 inputFileName = SCurveData_C%d.dat
+nTrigs = 10
 dir = ./
 
 [PHCalibrationFitting]
 inputFileName = phCalibration_C%d.dat
 dir = ./
 
-#Fulltest->Chips->Chip
+#Fulltest.Chips.Chip
 [AddressDecoding]
 AddressDecoding: AddressDecoding_C%d
 
@@ -18,49 +21,53 @@ AddressDecoding: AddressDecoding_C%d
 AddressLevels: AddressLevels_C%d
 
 [BumpBonding]
-Analog: BumpBond>vcals_xtalk_C%dDistribution
-Digital: BumpBondMap_C%dDistribution
+Analog: BumpBond.vcals_xtalk_C%dDistribution
+Digital: BumpBonding.dist_thr_calSMap_VthrComp_C%d_V0
 
 [BumpBondingProblems]
 Analog: vcals_xtalk_C%d
-Digital:  BumpBondMap_C%d
+Digital:  BumpBonding.thr_calSMap_VthrComp_C%d_V0
+
+[PHCalibrationGain]
+FitFileName: phCalibrationFit_C%d
 
 [PixelMap]
-PixelMap: PixelMap_C%d
-#Calibrate: None
-#Mask: None
+#PixelMap:  PixelAlive.PixelAlive_C%d_V0
+Calibrate:  PixelAlive.PixelAlive_C%d_V0
+Mask:       PixelAlive.MaskTest_C%d_V0
 
 [SCurveWidths]
-Analog: vcals_xtalk_C%d
-Digital: BumpBondMap_C%d
+Analog:  <!BumpBonding|Analog!>
+Digital:  <!BumpBonding|Digital!>
 
 [Summary]
-TrimBitMap0: CalThresholdMap_C%d;1
-TrimBitMap1: CalThresholdMap_C%d;2
-TrimBitMap2: CalThresholdMap_C%d;3
-TrimBitMap3: CalThresholdMap_C%d;4
-TrimBitMap4: CalThresholdMap_C%d;5
-ThresholdMap: VcalThresholdMap_C%dDistribution;8
+TrimBitMap0:  Trim.thr_TrimBitsThr0_Vcal_C%d_V0
+TrimBitMap1:  Trim.thr_TrimThr_trim7_Vcal_C%d_V0
+TrimBitMap2:  Trim.thr_TrimThr_trim11_Vcal_C%d_V0
+TrimBitMap3:  Trim.thr_TrimThr_trim13_Vcal_C%d_V0
+TrimBitMap4:  Trim.thr_TrimThr_trim14_Vcal_C%d_V0
+ThresholdMap: Trim.dist_thr_TrimThrFinal_vcal_C%d_V0
 
 [TrimBits]
-TrimBits: TrimMap_C%d;8
+#TrimBits: Trim.TrimMap_C%d;8
+TrimBitMap: Trim.TrimMap_C%d_V0
 
 [TrimBitMap]
-TrimBitMap: Trim_Map_4_ROC_%d
+TrimBitMap: Trim.TrimMap_C%d_V0
 
 [TrimBitTest]
-TrimBit3: TrimBit7_C%d
-TrimBit2: TrimBit11_C%d
-TrimBit1: TrimBit13_C%d
-TrimBit0: TrimBit14_C%d
+TrimBit3: Trim.TrimBit7_C%d_V0
+TrimBit2: Trim.TrimBit11_C%d_V0
+TrimBit1: Trim.TrimBit13_C%d_V0
+TrimBit0: Trim.TrimBit14_C%d_V0
 
 [VcalThresholdTrimmed]
-ThresholdMap: VcalThresholdMap_C%dDistribution;7
+ThresholdMap: VcalThresholdTrimmedMap_C%dDistribution
 
 #HIGH-RATE-TESTS
 
-#HighRateTest->HighRateEfficencyModule
-#HighRateTest->HighRateEfficencyModule->Chips->Chip
+#HighRateTest.HighRateEfficencyModule
+#HighRateTest.HighRateEfficencyModule.Chips.Chip
 [HighRateEffDist]
 effdist: effdist_C%d
 
@@ -80,8 +87,8 @@ vana:	hr_efficiency_analog_voltage
 idig:	hr_efficiency_digital_current
 vdig:	hr_efficiency_digital_voltage
 
-#HighRateTest->HighRatePixelMapModule
-#HighRateTest->HighRatePixelMapModule->Chips->Chip
+#HighRateTest.HighRatePixelMapModule
+#HighRateTest.HighRatePixelMapModule.Chips.Chip
 
 [HighRatePHDist]
 phmap: ph_dist_C%d
