--- a/Analyse/Configuration/Paths.cfg
+++ b/Analyse/Configuration/Paths.cfg
@@ -1,13 +1,15 @@
 [Paths]
 # Input data directory
-GlobalDataDirectory = /home/marco/prog/moreweb-vc/DATA
+#GlobalDataDirectory = /home/bachmair/DATA/moduleTest
+GlobalDataDirectory = /home/bachmair/DATA/digTest
 
 #local DB directory including the local html overview page
-GlobalOverviewPath = /home/marco/prog/moreweb-vc/DATA/Overview
+GlobalOverviewPath = /home/bachmair/DATA/Overview
 
 # If not specified (commented out) the FinalResults will be in a
 # subdirectory of the Raw Data
-GlobalFinalResultsPath = /home/marco/prog/moreweb-vc/DATA/FinalResults
+#GlobalFinalResultsPath = /Users/bachmair/DATA/FinalResults
+
 
 
 # If the Overview page is different to the local page, e.g. if one uses the
