updated Histoname config files
git-svn-id: https://svn.cern.ch/reps/moreweb@131 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -15,7 +15,7 @@ dir = ./
 
 #Fulltest.Chips.Chip
 [AddressDecoding]
-AddressDecoding: AddressDecoding_C%d
+AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
 
 [AddressLevels]
 AddressLevels: AddressLevels_C%d
@@ -55,6 +55,13 @@ TrimBitMap: Trim.TrimMap_C%d_V0
 [TrimBitMap]
 TrimBitMap: Trim.TrimMap_C%d_V0
 
+[TrimBitProblems]
+TrimBitMap0:  Trim.thr_TrimBitsThr0_Vcal_C%d_V0
+TrimBitMap1:  Trim.thr_TrimThr_trim7_Vcal_C%d_V0
+TrimBitMap2:  Trim.thr_TrimThr_trim11_Vcal_C%d_V0
+TrimBitMap3:  Trim.thr_TrimThr_trim13_Vcal_C%d_V0
+TrimBitMap4:  Trim.thr_TrimThr_trim14_Vcal_C%d_V0
+
 [TrimBitTest]
 TrimBit3: Trim.TrimBit7_C%d_V0
 TrimBit2: Trim.TrimBit11_C%d_V0
@@ -62,7 +69,7 @@ TrimBit1: Trim.TrimBit13_C%d_V0
 TrimBit0: Trim.TrimBit14_C%d_V0
 
 [VcalThresholdTrimmed]
-ThresholdMap: VcalThresholdTrimmedMap_C%dDistribution
+ThresholdMap: Trim.dist_thr_TrimThrFinal_vcal_C%d_V0
 
 #HIGH-RATE-TESTS
 
