--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -49,11 +49,19 @@ TrimBits: Trim_Distribution_4_ROC_%d
 [TrimBitMap]
 TrimBitMap: Trim_Map_4_ROC_%d
 
+[TrimBitProblems]
+TrimBitMap0: Vthr_Map_0_ROC_%d
+TrimBitMap1: Vthr_Map_1_ROC_%d
+TrimBitMap2: Vthr_Map_2_ROC_%d
+TrimBitMap3: Vthr_Map_3_ROC_%d
+TrimBitMap4: Vthr_Map_4_ROC_%d
+
 [TrimBitTest]
 TrimBit3: VthrCompDifference_Trim_7_ROC_%d
 TrimBit2: VthrCompDifference_Trim_11_ROC_%d
 TrimBit1: VthrCompDifference_Trim_13_ROC_%d
 TrimBit0: VthrCompDifference_Trim_14_ROC_%d
+
 
 [VcalThresholdTrimmed]
 ThresholdMap: Vcal_Distribution_4_ROC_%d
