fixing problems with sets and pxar analysis
git-svn-id: https://svn.cern.ch/reps/moreweb@133 4525493e-7705-40b1-a816-d608a930855b

--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -6,7 +6,7 @@ configParameters: configParameters.dat
 
 [SCurveFitting]
 inputFileName = SCurveData_C%d.dat
-nTrigs = 10
+nTrigs = 5
 dir = ./
 
 [PHCalibrationFitting]
@@ -69,7 +69,8 @@ TrimBit1: Trim.TrimBit13_C%d_V0
 TrimBit0: Trim.TrimBit14_C%d_V0
 
 [VcalThresholdTrimmed]
-ThresholdMap: Trim.dist_thr_TrimThrFinal_vcal_C%d_V0
+ThresholdDist: Trim.dist_thr_TrimThrFinal_vcal_C%d_V0
+ThresholdMap: Trim.thr_TrimThrFinal_vcal_C%d_V0
 
 #HIGH-RATE-TESTS
 
