--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -41,7 +41,7 @@ TrimBitMap2: Vthr_Map_2_ROC_%d
 TrimBitMap3: Vthr_Map_3_ROC_%d
 TrimBitMap4: Vthr_Map_4_ROC_%d
 #TO BE CHECKED
-ThresholdMap: Vcal_Map_4_ROC_%d
+ThresholdMap: Vcal_Distribution_4_ROC_%d
 
 [TrimBits]
 TrimBits: Trim_Distribution_4_ROC_%d
@@ -64,7 +64,8 @@ TrimBit0: VthrCompDifference_Trim_14_ROC_%d
 
 
 [VcalThresholdTrimmed]
-ThresholdMap: Vcal_Distribution_4_ROC_%d
+ThresholdDist: Vcal_Distribution_4_ROC_%d
+ThresholdMap: Vcal_Map_4_ROC_%d
 
 
 #HIGH-RATE-TESTS
