--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -34,6 +34,7 @@ maxThrDiff = 5
 BumpBondThr = 150
 StandardADC2ElectronConversionFactor = 65
 IVCurrentFactor = -1
+excludeTrimBit14 = 1.
 TrimBitDifference = 2.
 PixelMapMaxValue = 10
 PixelMapMinValue = 0
