added missing items in psi46expert.cfg to have all needed options to run analysis with psi46expert data

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -48,6 +48,13 @@ TrimBits: TrimMap_C%d;8
 [TrimBitMap]
 TrimBitMap: TrimMap_C%d;8
 
+[TrimBitProblems]
+TrimBitMap0:  CalThresholdMap_C%d;1
+TrimBitMap1:  CalThresholdMap_C%d;2
+TrimBitMap2:  CalThresholdMap_C%d;3
+TrimBitMap3:  CalThresholdMap_C%d;4
+TrimBitMap4:  CalThresholdMap_C%d;5
+
 [TrimBitTest]
 TrimBit3: TrimBit7_C%d
 TrimBit2: TrimBit11_C%d
@@ -55,7 +62,8 @@ TrimBit1: TrimBit13_C%d
 TrimBit0: TrimBit14_C%d
 
 [VcalThresholdTrimmed]
-ThresholdMap: VcalThresholdMap_C%dDistribution;7
+ThresholdDist:VcalThresholdMap_C%dDistribution;7
+ThresholdMap: VcalThresholdMap_C%d;7
 
 #HIGH-RATE-TESTS
 
