working on xray testing

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -116,7 +116,10 @@ vana:  hr_pixelmap_analog_voltage
 idig:  hr_pixelmap_digital_current
 vdig:  hr_pixelmap_digital_voltage
 
-
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
 pulseheight_cal: pulseheight_cal
+
+[FluorescenceTarget]
+PH_Calibration: pulseheight_cal
+PH_Calibration_ROC: ph_cal_C%d
