--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -127,3 +127,8 @@ vdig:  hr_pixelmap_digital_voltage
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
 pulseheight_cal: pulseheight_cal
+
+#TODO
+[FluorescenceTarget]
+PH_Calibration: pulseheight_cal
+PH_Calibration_ROC: ph_cal_C%d
