--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -123,3 +123,8 @@ vdig:  hr_pixelmap_digital_voltage
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
 pulseheight_cal: pulseheight_cal
+
+
+[FluorescenceTarget]
+PH_Calibration: pulseheight_cal
+PH_Calibration_ROC: ph_cal_C%d
