working on the right order plots for Trim Bit Problems

--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -36,10 +36,10 @@ Digital: <!BumpBonding|Digital!>
 
 [Summary]
 TrimBitMap0: Vthr_Map_0_ROC_%d
-TrimBitMap1: Vthr_Map_1_ROC_%d
-TrimBitMap2: Vthr_Map_2_ROC_%d
-TrimBitMap3: Vthr_Map_3_ROC_%d
-TrimBitMap4: Vthr_Map_4_ROC_%d
+TrimBitMap1: Vthr_Map_4_ROC_%d
+TrimBitMap2: Vthr_Map_3_ROC_%d
+TrimBitMap3: Vthr_Map_2_ROC_%d
+TrimBitMap4: Vthr_Map_1_ROC_%d
 #TO BE CHECKED
 ThresholdMap: Vcal_Distribution_4_ROC_%d
 
@@ -124,7 +124,7 @@ vdig:  hr_pixelmap_digital_voltage
 [FluorescenceSpectrum]
 pulseheight_cal: pulseheight_cal
 
-
+#TODO
 [FluorescenceTarget]
 PH_Calibration: pulseheight_cal
 PH_Calibration_ROC: ph_cal_C%d
