working on Xray nameing

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -2,6 +2,10 @@
 configFormat: dat
 configParameters: configParameters.dat
 
+[ConfigParameters]
+configFormat: dat
+configParameters: configParameters.dat
+
 [SCurveFitting]
 inputFileName = SCurveData_C%d.dat
 dir = ./
