--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -2,6 +2,10 @@
 configFormat: cfg
 configParameters: tb,module
 
+[ConfigParameters]
+configFormat: cfg
+configParameters: tb,module
+
 [SCurveFitting]
 inputFileName = SCurveData_C%d.dat
 nTrigs = 50
