--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -1,5 +1,10 @@
 [RootFile]
 filename: pxar.root
+
+[ConfigParameters]
+configFormat: dat
+configParameters: configParameters.dat
+
 [Fulltest]
 configFormat: dat
 configParameters: configParameters.dat
@@ -126,9 +131,9 @@ vdig:  hr_pixelmap_digital_voltage
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
-pulseheight_cal: pulseheight_cal
+pulseheight_cal: Xray.ph_xx_C%d_V0
 
 #TODO
 [FluorescenceTarget]
-PH_Calibration: pulseheight_cal
-PH_Calibration_ROC: ph_cal_C%d
+PH_Calibration: Xray.q_xx_C%d_V0
+PH_Calibration_ROC: Xray.ph_xx_C%d_V0
