updated pyxar flourescenceTarget histo name

--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -131,4 +131,4 @@ pulseheight_cal: pulseheight_cal
 #TODO
 [FluorescenceTarget]
 PH_Calibration: pulseheight_cal
-PH_Calibration_ROC: ph_cal_C%d
+PH_Calibration_ROC: PH_VCAL_ROC_%d
