iupdated FluorescenceTarget options to Spectrum and SCurve

--- a/Analyse/Configuration/HistoNames/psi46expert.cfg
+++ b/Analyse/Configuration/HistoNames/psi46expert.cfg
@@ -125,5 +125,5 @@ vdig:  hr_pixelmap_digital_voltage
 pulseheight_cal: pulseheight_cal
 
 [FluorescenceTarget]
-PH_Calibration: pulseheight_cal
-PH_Calibration_ROC: ph_cal_C%d
+SCurve: pulseheight_cal
+Spectrum: ph_cal_C%d
