--- a/Analyse/Configuration/HistoNames/pxar.cfg
+++ b/Analyse/Configuration/HistoNames/pxar.cfg
@@ -135,5 +135,5 @@ pulseheight_cal: Xray.ph_xx_C%d_V0
 
 #TODO
 [FluorescenceTarget]
-PH_Calibration: Xray.q_xx_C%d_V0
-PH_Calibration_ROC: Xray.ph_xx_C%d_V0
+SCurve: Xray.q_xx_C%d_V0
+Spectrum: Xray.ph_xx_C%d_V0
