--- a/Analyse/Configuration/HistoNames/pyxar.cfg
+++ b/Analyse/Configuration/HistoNames/pyxar.cfg
@@ -130,5 +130,5 @@ pulseheight_cal: pulseheight_cal
 
 #TODO
 [FluorescenceTarget]
-PH_Calibration: pulseheight_cal
-PH_Calibration_ROC: PH_VCAL_ROC_%d
+SCurve: pulseheight_cal
+Spectrum: PH_VCAL_ROC_%d
