--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -131,9 +131,9 @@ vdig:  hr_pixelmap_digital_voltage
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
-pulseheight_cal: Xray.ph_nada_C%d_V0
+pulseheight_cal: Xray.ph_C%d_V0
 
 #TODO
 [FluorescenceTarget]
 SCurve: Xray.dist_thr_xrayScan_vcal_C%d_V0
-Spectrum: Xray.q_nada_C%d_V0
+Spectrum: Xray.q_C%d_V0
