Taking trimbit distribution instead of trimbit map for Chip:TrimBits TestResults

--- a/Analyse/Configuration/Software/psi46expert.cfg
+++ b/Analyse/Configuration/Software/psi46expert.cfg
@@ -47,7 +47,7 @@ TrimBitMap4: CalThresholdMap_C%d;5
 ThresholdMap: VcalThresholdMap_C%dDistribution;8
 
 [TrimBits]
-TrimBits: TrimMap_C%d;8
+TrimBits: TrimMap_C%dDistribution;8
 
 [TrimBitMap]
 TrimBitMap: TrimMap_C%d;8
