--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -18,6 +18,19 @@ dir = ./
 inputFileName = phCalibration_C%d.dat
 dir = ./
 
+#BareModuleTest.Chips.Chip
+[BareBBMap]
+BareBBMap: BareBBMap.BBtestMap_C%d
+#BareBBMap: BareBBMap.BBtestMap_C%d_V0
+
+[BareBBWidth]
+BareBBWidth: BareBBMap.CalsVthrPlateauWidth_C%d
+#BareBBWidth: BareBBMap.BareBBWidth_C%d_V0
+
+[BareBBScan]
+BareBBScan: BareBBMap.h22_C%d
+#BareBBScan: BareBBMap.h22_C%d_V0
+
 #Fulltest.Chips.Chip
 [AddressDecoding]
 AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
