--- a/Analyse/Configuration/Software/psi46expert.cfg
+++ b/Analyse/Configuration/Software/psi46expert.cfg
@@ -1,3 +1,22 @@
+[RootFile]
+filename: D4004.root
+
+[BarePixelMap]
+BarePixelMap: AliveMap_Vcal222_CR0_C%d
+#BarePixelMap: AliveMap_Vcal255_CR4_C%d
+
+[BareBBMap]
+BareBBMap: ResponseMap_C%d
+#BareBBMap: BareBBMap.BBtestMap_C%d_V0
+
+[BareBBWidth]
+BareBBWidth: CalsVthrPlateauWidth_C%d
+#BareBBWidth: BareBBMap.BareBBWidth_C%d_V0
+
+[BareBBScan]
+BareBBScan: cals N_DAC12_map_C%d
+#BareBBScan: BareBBMap.h22_C%d_V0
+
 [Fulltest]
 configFormat: dat
 configParameters: configParameters.dat
