--- a/Analyse/Configuration/Software/global.cfg
+++ b/Analyse/Configuration/Software/global.cfg
@@ -13,9 +13,10 @@ Sn:         25271.36
 Ba:         32193.262
 Tb:         44482.75
 
-IgnoredTarges: Fe, Cu, Ba
-FitOption: all
-#FitOption: optimized
+#IgnoredTarges: Fe, Cu, Ba
+IgnoredTarges: 
+#FitOption: all
+FitOption: optimized
 
 
 [psi46digv2]
