Analog/digital current in pxar.cfg

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -35,6 +35,12 @@ BareBBScan: BareBBMap.h22_C%d
 [AddressDecoding]
 AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
 
+[DigitalCurrent]
+DigitalCurrent: HD
+
+[AnalogCurrent]
+AnalogCurrent: HA
+
 [AddressLevels]
 AddressLevels: AddressLevels_C%d
 
