--- a/Analyse/Configuration/Software/global.cfg
+++ b/Analyse/Configuration/Software/global.cfg
@@ -13,10 +13,13 @@ Sn:         25271.36
 Ba:         32193.262
 Tb:         44482.75
 
+[XrayCalibration]
 #IgnoredTarges: Fe, Cu, Ba
 IgnoredTarges: 
 #FitOption: all
 FitOption: optimized
+SCurveMethod: False
+SpectrumMethod: True
 
 
 [psi46digv2]
