--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -156,3 +156,5 @@ pulseheight_cal: Xray.ph_C%d_V0
 [FluorescenceTarget]
 SCurve: Xray.dist_thr_xrayScan_vcal_C%d_V0
 Spectrum: Xray.q_C%d_V0
+XrayHitMap: Xray.hMap_target_C%d_V0
+XrayNtrig: Xray.ntrig_target_C%d_V0
