--- a/Analyse/Configuration/SystemConfiguration.cfg
+++ b/Analyse/Configuration/SystemConfiguration.cfg
@@ -2,6 +2,7 @@
 AnalysisRevision = 1
 GenerateResultData = 1
 DefaultImageFormat = svg
+AdditionalImageFormats = root,pdf
 GzipSVG = 0
 UseGlobalDatabase =  0
 DatabaseType = 
