--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -40,3 +40,6 @@ PixelMapMaxValue = 10
 PixelMapMinValue = 0
 PixelMapMaskDefectUpperThreshold = 0
 BumpBondingProblemsNSigma = 5
+XRayHighRateEfficiency_min_allowed_efficiency_50 = 5
+XRayHighRateEfficiency_min_allowed_efficiency_150 = 5
+XRayHighRateEfficiency_max_allowed_loweff_A = 10
