High Rate Tests: XRay Readout Uniformity

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -52,3 +52,4 @@ XRayHighRateHotPixels_Threshold = 1
 XRayHighRateHotPixels_max_allowed_hot = 100
 XRayHighRate_factor_dcol_uniformity_low = 0.5
 XRayHighRate_factor_dcol_uniformity_high = 1.5
+XRayHighRate_factor_readout_uniformity = 5
