High Rate Test, Plot Caption for PDF

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -53,3 +53,4 @@ XRayHighRateHotPixels_max_allowed_hot = 100
 XRayHighRate_factor_dcol_uniformity_low = 0.5
 XRayHighRate_factor_dcol_uniformity_high = 1.5
 XRayHighRate_factor_readout_uniformity = 5
+XRayHighRate_Factor_ColEfficiency = 5
