High Rate Test: SCurve Widths

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -54,3 +54,5 @@ XRayHighRate_factor_dcol_uniformity_low = 0.5
 XRayHighRate_factor_dcol_uniformity_high = 1.5
 XRayHighRate_factor_readout_uniformity = 5
 XRayHighRate_Factor_ColEfficiency = 5
+XRayHighRate_SCurve_Noise_Threshold_50 = 400
+XRayHighRate_SCurve_Noise_Threshold_150 = 400
