--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -42,12 +42,24 @@ PixelMapMaskDefectUpperThreshold = 0
 BumpBondingProblemsNSigma = 5
 XRayHighRateEfficiency_min_allowed_efficiency_50 = 90
 XRayHighRateEfficiency_min_allowed_efficiency_edge_50 = 90
+XRayHighRateEfficiency_min_allowed_efficiency_100 = 50
+XRayHighRateEfficiency_min_allowed_efficiency_edge_100 = 50
 XRayHighRateEfficiency_min_allowed_efficiency_150 = 50
 XRayHighRateEfficiency_min_allowed_efficiency_edge_150 = 50
+XRayHighRateEfficiency_min_allowed_efficiency_200 = 50
+XRayHighRateEfficiency_min_allowed_efficiency_edge_200 = 50
+XRayHighRateEfficiency_min_allowed_efficiency_250 = 50
+XRayHighRateEfficiency_min_allowed_efficiency_edge_250 = 50
 XRayHighRateEfficiency_max_allowed_loweff_A_50 = 10
+XRayHighRateEfficiency_max_allowed_loweff_A_100 = 10
 XRayHighRateEfficiency_max_allowed_loweff_A_150 = 10
+XRayHighRateEfficiency_max_allowed_loweff_A_200 = 10
+XRayHighRateEfficiency_max_allowed_loweff_A_250 = 10
 XRayHighRateEfficiency_max_allowed_loweff_B_50 = 20
+XRayHighRateEfficiency_max_allowed_loweff_B_100 = 20
 XRayHighRateEfficiency_max_allowed_loweff_B_150 = 20
+XRayHighRateEfficiency_max_allowed_loweff_B_200 = 20
+XRayHighRateEfficiency_max_allowed_loweff_B_250 = 20
 XRayHighRateHotPixels_Threshold = 1
 XRayHighRateHotPixels_max_allowed_hot = 100
 XRayHighRate_factor_dcol_uniformity_low = 0.5
