add leakage current after start-up analysis

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -40,3 +40,5 @@ PixelMapMaxValue = 10
 PixelMapMinValue = 0
 PixelMapMaskDefectUpperThreshold = 0
 BumpBondingProblemsNSigma = 5
+leakageCurrentPON_B = 5
+leakageCurrentPON_C = 15
