Including the digital current measurement for each-roc

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -38,6 +38,9 @@ AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
 [DigitalCurrent]
 DigitalCurrent: HD
 
+[DigChipCurrent]
+DigitalCurrent: BumpBonding.hd_C%d
+
 [AnalogCurrent]
 AnalogCurrent: HA
 
