clean up grading, remove hard coded histogram names to config, make number of interpolation rates flexible, fix bug with pixel efficiency distribution where some pixels were missing, log scale for pixel efficiency distribution, distribution of hits per n events and comparison with theoretical (poisson) and calculation of chi2 as goodness parameter

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -98,8 +98,12 @@ ThresholdMap: Trim.thr_TrimThrFinal_vcal_C%d_V0
 
 #HIGH-RATE-TESTS
 [HighRate]
-EfficiencyMap: HighRate.highRate_C{ChipNo}_V0
 HotPixelMap: Xray.hitMap_hotpixels_C{ChipNo}_V0
+EfficiencyMap: HighRate.highRate_C{ChipNo}_V0
+BackgroundMap: HighRate.highRate_xraymap_C{ChipNo}_V0
+hitsVsColumn: Xray.hitsVsColumn_Ag_C{ChipNo}_V0
+hitsVsEvents: Xray.hitsVsEvents_Ag_C{ChipNo}_V0
+hitsVsEvtCol: Xray.hitsVsEvtCol_Ag_C{ChipNo}_V0
 SCurveBaseName: {Directory}/XSCurveData_C{ChipNo}.dat
 
 #XRAY CALIBRATION
