fix scurve fitting for xray noise

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -104,7 +104,8 @@ BackgroundMap: HighRate.highRate_xraymap_C{ChipNo}_V0
 hitsVsColumn: Xray.hitsVsColumn_Ag_C{ChipNo}_V0
 hitsVsEvents: Xray.hitsVsEvents_Ag_C{ChipNo}_V0
 hitsVsEvtCol: Xray.hitsVsEvtCol_Ag_C{ChipNo}_V0
-SCurveBaseName: {Directory}/XSCurveData_C{ChipNo}.dat
+SCurveDataFileName: XSCurveData_C{ChipNo}.dat
+SCurveFileName: SCurve_C{ChipNo}.dat
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
