--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -54,3 +54,5 @@ XRayHighRate_factor_dcol_uniformity_high = 1.5
 XRayHighRate_factor_readout_uniformity = 5
 XRayHighRate_Factor_ColUniformity = 5
 XRayHighRate_SCurve_Noise_Threshold = 400
+XRayHighRate_missing_xray_pixels_B = 42
+XRayHighRate_missing_xray_pixels_C = 168
