add pixel alive map to hr test, show 'bb problems' (hits=0 && pixel ok) instead of 'missing hits' (hits=0) in roc summary, add roc grade to roc summary, add grading lines to interpolated efficiency

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -106,6 +106,7 @@ hitsVsEvents: Xray.hitsVsEvents_Ag_C{ChipNo}_V0
 hitsVsEvtCol: Xray.hitsVsEvtCol_Ag_C{ChipNo}_V0
 SCurveDataFileName: XSCurveData_C{ChipNo}.dat
 SCurveFileName: SCurve_C{ChipNo}.dat
+AliveMap: PixelAlive.PixelAlive_C{ChipNo}_V0
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
