--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -107,6 +107,7 @@ hitsVsEvtCol: Xray.hitsVsEvtCol_Ag_C{ChipNo}_V0
 SCurveDataFileName: XSCurveData_C{ChipNo}.dat
 SCurveFileName: SCurve_C{ChipNo}.dat
 AliveMap: PixelAlive.PixelAlive_C{ChipNo}_V0
+CalDelScan: HighRate.HR_CalDelScan_eff_C{ChipNo}_V0
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
