--- a/Analyse/Configuration/ModuleInformation.cfg
+++ b/Analyse/Configuration/ModuleInformation.cfg
@@ -11,6 +11,6 @@ TestType = automatic
 refit = False
 
 [XRayHRQualification]
-Rates = 50,150
 TimeConstant = 25e-9
 Area = 0.6561
+OmitGradesInFinalGrading = HotPixelsGrade,HitMapGrade_50,EfficiencyGrade_50
