make additional fit constraints optional and add options to global.cfg file to activate them

--- a/Analyse/Configuration/Software/global.cfg
+++ b/Analyse/Configuration/Software/global.cfg
@@ -18,6 +18,9 @@ Tb:         44482.75
 IgnoredTarges: 
 #FitOption: all
 FitOption: optimized
+SpectrumFitImproveInitialGuess: False
+SpectrumFitAdditionalConstraints: False
+LinearFitAdditionalConstraints: False
 SCurveMethod: False
 SpectrumMethod: True
 AreaPerROC: 0.624
