--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -108,6 +108,7 @@ SCurveDataFileName: XSCurveData_C{ChipNo}.dat
 SCurveFileName: SCurve_C{ChipNo}.dat
 AliveMap: PixelAlive.PixelAlive_C{ChipNo}_V0
 CalDelScan: HighRate.HR_CalDelScan_eff_C{ChipNo}_V0
+HitMap: Xray.hMap_Ag_C{ChipNo}_V0
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
