Update BumpBondingBB2 cut and fixing  when one histogram does not exist

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -20,15 +20,16 @@ dir = ./
 
 #BareModuleTest.Chips.Chip
 [BareBBMap]
-BareBBMap: BareBBMap.BBtestMap_C%d
+BareBBMap: BB2.BBtestMap_C%d_V0
 #BareBBMap: BareBBMap.BBtestMap_C%d_V0
 
 [BareBBWidth]
-BareBBWidth: BareBBMap.CalsVthrPlateauWidth_C%d
+BareBBWidth: BB2.CalsVthrPlateauWidth_C%d_V0
 #BareBBWidth: BareBBMap.BareBBWidth_C%d_V0
 
 [BareBBScan]
-BareBBScan: BareBBMap.h22_C%d
+BareBBScan: BB2.N_VthrComp_C%d_V0
+
 #BareBBScan: BareBBMap.h22_C%d_V0
 
 #Fulltest.Chips.Chip
@@ -36,7 +37,7 @@ BareBBScan: BareBBMap.h22_C%d
 AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
 
 [DigitalCurrent]
-DigitalCurrent: HD
+DigitalCurrent:HD
 
 [DigChipCurrent]
 DigitalCurrent: BumpBonding.hd_C%d
