--- a/Analyse/Configuration/SystemConfiguration.cfg
+++ b/Analyse/Configuration/SystemConfiguration.cfg
@@ -3,6 +3,7 @@ AnalysisRevision = 1
 GenerateResultData = 1
 DefaultImageFormat = svg
 AdditionalImageFormats = root,pdf
+ParallelProcessing = 1
 GzipSVG = 0
 UseGlobalDatabase =  0
 DatabaseType = 
