hr test: count noisy pixels as defects, grading on total number of defects, show grade A/B/C rocs in qualification summary, show few more stats in module overview page

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -58,3 +58,5 @@ XRayHighRate_SCurve_Noise_Threshold_B = 600
 XRayHighRate_SCurve_Noise_Threshold_C = 900
 XRayHighRate_missing_xray_pixels_B = 42
 XRayHighRate_missing_xray_pixels_C = 168
+XRayHighRate_pixel_defects_B = 42
+XRayHighRate_pixel_defects_C = 168
