add tornado plot to fulltest

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -36,6 +36,9 @@ BareBBScan: BB2.N_VthrComp_C%d_V0
 [AddressDecoding]
 AddressDecoding: PixelAlive.AddressDecodingTest_C%d_V0
 
+[DacDac]
+CalDelVthrcomp: Pretest.pretestVthrCompCalDel_c*_r*_C%d_V0
+
 [DigitalCurrent]
 DigitalCurrent:HD
 
