move BB problems plot creation to ROC level, add BB4 test and take BB4 results for grading if both BB and BB4 are available

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -59,6 +59,9 @@ Digital: BumpBonding.dist_thr_calSMap_VthrComp_C%d_V0
 Analog: vcals_xtalk_C%d
 Digital:  BumpBonding.thr_calSMap_VthrComp_C%d_V0
 
+[BB4]
+PixelHit: BB4.PixelHit_C%d_V0
+
 [PHCalibrationGain]
 FitFileName: phCalibrationFit_C%d
 
