read hot pixels from mask file if MaskHotPixels test is not found, avoid double counting of masked pixels as defects, fix bug with wrong order of efficiency plots if tests executed in different order

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -119,6 +119,7 @@ SCurveFileName: SCurve_C{ChipNo}.dat
 AliveMap: PixelAlive.PixelAlive_C{ChipNo}_V0
 CalDelScan: HighRate.HR_CalDelScan_eff_C{ChipNo}_V0
 HitMap: Xray.hMap_Ag_C{ChipNo}_V0
+MaskFile: defaultMaskFile.dat
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
