add retrimmed hotpixels map

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -120,6 +120,7 @@ AliveMap: PixelAlive.PixelAlive_C{ChipNo}_V0
 CalDelScan: HighRate.HR_CalDelScan_eff_C{ChipNo}_V0
 HitMap: Xray.hMap_Ag_C{ChipNo}_V0
 MaskFile: defaultMaskFile.dat
+RetrimHotPixels: HighRate.trimbitdiff_C{ChipNo}_V0
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
