fix some pixel defect gradings, remove dead code, more verbose printout of pixel defects in fulltest

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -8,12 +8,16 @@ par1Min = 0.
 par1Max = 7.
 noiseB = 500
 noiseC = 1000
+pixelNoiseMin = 50
+pixelNoiseMax = 400
 noiseDistribution =  1.0
 trimmingB = 200
 trimmingC = 400
 trmDistribution = 1.0
 gainB =  0.1
 gainC =  0.2
+pixelAbsoluteGainMax = 4.5
+pixelAbsoluteGainMin = 1
 gainDistribution =  1.0
 pedestalB = 2500
 pedestalC = 5000
@@ -23,6 +27,8 @@ par1C = 2000.
 par1Distribution =  1.0
 defectsB = 42
 defectsC = 168
+maskDefectsB = 1
+maskDefectsC = 1
 currentB = 2
 currentBm10 = 3
 currentC = 10
