possible fix for iv grading problem, display individual electrical and IV grade

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -27,7 +27,8 @@ currentB = 2
 currentBm10 = 3
 currentC = 10
 currentCm10 = 15
-slopeivB =  2
+slopeivB = 2
+slopeivC = 2
 # check
 minThrDiff = -5
 maxThrDiff = 5
