add option to limit number of subprocesses in fitting (for lower memory usage etc.)

--- a/Analyse/Configuration/SystemConfiguration.cfg
+++ b/Analyse/Configuration/SystemConfiguration.cfg
@@ -3,7 +3,8 @@ AnalysisRevision = 1
 GenerateResultData = 1
 DefaultImageFormat = svg
 AdditionalImageFormats = root,pdf
-ParallelProcessing = 1
+ParallelProcessing = 0
+LimitProcesses = 8
 GzipSVG = 0
 UseGlobalDatabase =  0
 DatabaseType = 
