perliminary change in gain grading for new fitting

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -1,7 +1,7 @@
 [GradingParameters]
 tthrTol = 10
-gainMin = 1.
-gainMax =  4.5
+gainMin = 1.5
+gainMax = 5
 par1Min = 0.
 par1Max = 7.
 noiseB = 500
@@ -12,15 +12,15 @@ noiseDistribution =  1.0
 trimmingB = 200
 trimmingC = 400
 trmDistribution = 1.0
-gainB =  0.1
-gainC =  0.2
-gainDistribution =  1.0
+gainB = 0.1
+gainC = 0.2
+gainDistribution = 1.0
 pedestalB = 2500
 pedestalC = 5000
-pedDistribution =  0.96
+pedDistribution = 0.96
 par1B = 1000.
 par1C = 2000.
-par1Distribution =  1.0
+par1Distribution = 1.0
 defectsB = 42
 defectsC = 168
 maskDefectsB = 1
