add measured hitrate to x-ray noise distribution

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -121,6 +121,7 @@ CalDelScan: HighRate.HR_CalDelScan_eff_C{ChipNo}_V0
 HitMap: Xray.hMap_Ag_C{ChipNo}_V0
 MaskFile: defaultMaskFile.dat
 RetrimHotPixels: HighRate.trimbitdiff_C{ChipNo}_V0
+NoiseBackgroundMap: HighRate.vcal_xraymap_C{ChipNo}_V*
 
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
