add distribution of double column efficiency plots, add fit type info to plots which show a fit line

--- a/Analyse/Configuration/ModuleInformation.cfg
+++ b/Analyse/Configuration/ModuleInformation.cfg
@@ -13,4 +13,4 @@ refit = False
 [XRayHRQualification]
 TimeConstant = 25e-9
 Area = 0.6561
-OmitGradesInFinalGrading = HotPixelsGrade,HitMapGrade_50,EfficiencyGrade_50
+OmitGradesInFinalGrading = HitMapGrade_50,EfficiencyGrade_50
