add option to sort qualification overview differently

--- a/Analyse/Configuration/SystemConfiguration.cfg
+++ b/Analyse/Configuration/SystemConfiguration.cfg
@@ -6,6 +6,7 @@ DefaultImageFormat = svg
 AdditionalImageFormats = root,pdf
 ParallelProcessing = 1
 LimitProcesses = 8
+QualificationOverviewSort = ModuleID ASC,TestType ASC,TestDate ASC
 GzipSVG = 0
 UseGlobalDatabase =  0
 DatabaseType = 
