add timestamp and moreweb version info to production overview page

--- a/Analyse/Configuration/ProductionOverview.cfg
+++ b/Analyse/Configuration/ProductionOverview.cfg
@@ -2,4 +2,4 @@
 GenerateTotalOverview = 1
 GenerateWeeklyOverviews = 0
 ModuleQualificationFinalDate = first
-RequiredTestTypesForComplete = m20_1,m20_2,p17_1
+RequiredTestTypesForComplete = m20_1,m20_2,p17_1,XRayHRQualification,XrayCalibration_Spectrum
