--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -26,9 +26,11 @@ defectsC = 168
 maskDefectsB = 1
 maskDefectsC = 1
 currentB = 2
-currentBm10 = 10
+currentBrecalculated = 10
 currentC = 10
-currentCm10 = 999
+currentCrecalculated = 999
+leakageCurrentRatioB = 20
+leakageCurrentRatioC = -999
 slopeivB = 2
 slopeivC = 999
 IanaLossThr = 15
