--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -82,6 +82,9 @@ FitFileName: phCalibrationFit_C%d
 Calibrate:  PixelAlive.PixelAlive_C%d_V0
 Mask:       PixelAlive.MaskTest_C%d_V0
 
+[ReadbackCalVdig]
+VdigCalibration: Readback.rbVd_C%d_V0
+
 [SCurveWidths]
 Analog:  <!BumpBonding|Analog!>
 Digital:  <!BumpBonding|Digital!>
