Adding Readback Calibration Vana to the Chip-panel.

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -85,6 +85,9 @@ Mask:       PixelAlive.MaskTest_C%d_V0
 [ReadbackCalVdig]
 VdigCalibration: Readback.rbVd_C%d_V0
 
+[ReadbackCalVana]
+VanaCalibration: Readback.rbVa_C%d_V0
+
 [ReadbackCalIana]
 AdcVsDac: Readback.rbIa_C%d_V0
 CurrentVsDac : Readback.tbIa_C%d_V0
