Adding Vbg in ReadbackCal

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -92,6 +92,9 @@ VanaCalibration: Readback.rbVa_C%d_V0
 AdcVsDac: Readback.rbIa_C%d_V0
 CurrentVsDac : Readback.tbIa_C%d_V0
 
+[ReadbackCalVbg]
+VbgCalibration: Readback.Vbg_readback_VdCal_V0
+
 [SCurveWidths]
 Analog:  <!BumpBonding|Analog!>
 Digital:  <!BumpBonding|Digital!>
