--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -128,6 +128,9 @@ ThresholdMap: Trim.thr_TrimThrFinal_vcal_C%d_V0
 [VcalThresholdUntrimmed]
 ThresholdMap: Scurves.thr_scurveVcal_Vcal_C%d_V0
 
+[VcalThresholdTrimmedMap]
+ThresholdMapTrimmed: Trim.thr_TrimThrFinal_vcal_C%d_V0
+
 #HIGH-RATE-TESTS
 [HighRate]
 HotPixelMap: Xray.hitMap_hotpixels_C{ChipNo}_V0
