grade on Iana loss test and clean up of some code

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -93,6 +93,9 @@ MinPHDist: PhOptimization.dist_minphmap_C%d_V0
 Calibrate:  PixelAlive.PixelAlive_C%d_V0
 Mask:       PixelAlive.MaskTest_C%d_V0
 
+[Pretest]
+ProgramROC: Pretest.programROC_V0
+
 [GainPedestal]
 GainPedestalP0: GainPedestal.gainPedestalP0_C%d_V0
 
