--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -45,6 +45,7 @@ PixelMapMaxValue = 10
 PixelMapMinValue = 0
 PixelMapMaskDefectUpperThreshold = 0
 BumpBondingProblemsNSigma = 5
+BumpBondingProblemsMinDistanceFromPeak = 5
 leakageCurrentPON_B = 5
 leakageCurrentPON_C = 30
 XRayHighRateEfficiency_NInterpolationRates = 2
