add few values to on shell quick test

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -191,3 +191,4 @@ DeltaAliveHV: OnShellQuickTest.delta_alive_hv_V0
 ProgramROC: OnShellQuickTest.programROC_V0
 Vana: OnShellQuickTest.VanaSettings_V0
 Iana: OnShellQuickTest.Iana_V0
+DigitalCurrent: HD
