Modify files to analyze new XPixelAlive test

--- a/Analyse/Configuration/Software/pxar.cfg
+++ b/Analyse/Configuration/Software/pxar.cfg
@@ -171,6 +171,12 @@ MaskFile: defaultMaskFile.dat
 RetrimHotPixels: HighRate.trimbitdiff_C{ChipNo}_V0
 NoiseBackgroundMap: HighRate.vcal_xraymap_C{ChipNo}_V*
 
+[HighRate2]
+EfficiencyMap: XPixelAlive2.highRate_C{ChipNo}_V0
+BackgroundMap: XPixelAlive2.highRate_xraymap_C{ChipNo}_V0
+CalDelScan: XPixelAlive2.HR_CalDelScan_eff_C{ChipNo}_V0
+NoiseBackgroundMap: XPixelAlive2.vcal_xraymap_C{ChipNo}_V*
+
 #XRAY CALIBRATION
 [FluorescenceSpectrum]
 pulseheight_cal: Xray.ph_C%d_V0
