L1 grading changes, OnShellQuickTest grading changes

--- a/Analyse/Configuration/GradingParameters.cfg
+++ b/Analyse/Configuration/GradingParameters.cfg
@@ -3,6 +3,8 @@ trimThr = 35
 tthrTol = 10
 gainMin = 1.0
 gainMax = 5.0
+L1_gainMin = 1.0
+L1_gainMax = 8.0
 par1Min = 0.
 par1Max = 7.
 noiseB = 200
@@ -28,7 +30,7 @@ maskDefectsB = 1
 maskDefectsC = 1
 currentB = 2
 currentC = 10
-leakageCurrentRatioB = 20
+leakageCurrentRatioB = -999
 leakageCurrentRatioC = -999
 slopeivB = 2
 slopeivC = 999
