show all subtests in qualification overview page, even when subtests are in different folders. add option to also show outdated results (instead of overwriting by the latest). don't show duplicate comments on overview pages. sort qualification overview page results descending by date

--- a/Analyse/Configuration/SystemConfiguration.cfg
+++ b/Analyse/Configuration/SystemConfiguration.cfg
@@ -2,6 +2,7 @@
 AnalysisRevision = 1
 GenerateResultData = 1
 GenerateProductionOverview = 1
+ShowOnlyLatestTestResults = 0
 DefaultImageFormat = svg
 AdditionalImageFormats = root,pdf
 ParallelProcessing = 1
